# brrricks

./: .gitignore  Cargo.toml  README.md  build.rs  monk.yaml  process_builder_diagram.html  qrios-ussd-api-swagger.json  rustfmt.toml
associated_type_process_builder/: Cargo.toml
associated_type_process_builder/src/: brick.rs  builder.rs  builder_helpers.rs  invariant.rs  lib.rs  split_index.rs
axum_postgres_session_store/: Cargo.toml
axum_postgres_session_store/src/: lib.rs
graphical_process_builder/: Cargo.toml  README.md
graphical_process_builder/src/: app.rs  brick.rs  lib.rs  main.rs
graphical_process_builder/src/brick/: brick.rs  mod.rs
process/: Cargo.toml
process/src/: brick_domain.rs  internal_brick.rs  internal_process.rs  lib.rs
process_builder/: Cargo.toml
process_builder/src/: brick.rs  builder.rs  builder_helpers.rs  internal_brick.rs  internal_process.rs  lib.rs  split_index.rs
process_builder_common/: Cargo.toml
process_builder_common/src/: brick_domain.rs  internal_process.rs  lib.rs  process_builder_diagram.dot  process_builder_diagram.mermaid
process_runner/: Cargo.toml  build.rs
process_runner/src/: lib.rs  qrios_ussd_api_swagger.rs  runnable_process.rs
qrios_api_axum_server/: Cargo.toml  README.md
qrios_api_axum_server/.openapi-generator/: FILES
qrios_api_axum_server/src/: lib.rs  models.rs  types.rs
qrios_api_axum_server/src/apis/: developers_app_endpoints.rs  mod.rs
qrios_api_axum_server/src/server/: mod.rs
qrios_api_process_entry/: Cargo.toml
qrios_api_process_entry/src/: lib.rs
qrios_api_process_runner/: Cargo.toml  build.rs
qrios_api_process_runner/src/: lib.rs  session_store.rs
qrios_api_reqwest_client/: Cargo.toml  build.rs
qrios_api_reqwest_client/src/: lib.rs
qrios_api_types/: Cargo.toml
qrios_api_types/src/: lib.rs
simple_process/: Cargo.toml
simple_process/src/: lib.rs
simple_process/src/bricks/: brick.rs
simple_process/src/process/: process.rs
sqlx_postgres_session_store/: Cargo.toml
src/: main.rs  standard_io_process_interpreter.rs  standard_io_process_runner.rs
src/bricks/: brick.rs  lib.rs
src/process/: process.rs
type_bitset_process_builder/: Cargo.-toml  Cargo.toml
type_bitset_process_builder/src/: brick.rs  builder.rs  builder_helpers.rs  lib.rs  split_index.rs
type_encoded_process/: Cargo.toml
type_encoded_process/src/: lib.rs
type_encoded_process/src/bricks/: mod.rs
type_encoded_process/src/process/: process.rs
type_process_adapter/: Cargo.toml
type_process_adapter/src/: lib.rs
type_process_builder/: Cargo.toml
type_process_builder/doc/: brrricks_app_session_flow.mmd  process_builder_states.mmd
type_process_builder/src/: brick.rs  builder.rs  builder_helpers.rs  hlist_concat.rs  hlist_difference.rs  hlist_empty.rs  hlist_intersect.rs  hlist_intersection.rs  hlist_transform.rs  hlist_transform_to.rs  hlist_transformer.rs  lib.rs  param_list.rs  process_builder_diagram.dot  process_builder_diagram.mermaid  process_builder_diagram.mmd  step.rs  type_eq.rs
type_process_builder/src/builder/: finalized_process.rs  finalized_split_process.rs  flowing_process.rs  flowing_split_process.rs  runnable_process.rs  split_process.rs
type_process_builder/src/builder/finalized_split_process/: first_case_of_finalized_split_process.rs  next_case_of_finalized_split_process.rs
type_process_builder/src/builder/flowing_process/: entry_flowing_process.rs  form_flowing_process.rs  operation_flowing_process.rs  subprocess.rs
type_process_builder/src/builder/flowing_split_process/: finalized_case_of_flowing_split_process.rs  first_case_of_flowing_split_process.rs  flowing_case_of_finalized_split_process.rs  flowing_case_of_flowing_split_process.rs  next_case_of_flowing_split_process.rs
type_process_builder/src/builder/split_process/: split_process_form_splitter.rs  split_process_splitter.rs
type_process_builder/src/param_list/: borrow_just.rs  clone_just.rs  concat.rs  contains.rs  filter.rs  intersect.rs  transform.rs  union.rs
typestate_process_builder/: Cargo.toml
typestate_process_builder/src/: brick.rs  builder.rs  builder_helpers.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
