build.target-dir = "./target"

[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
build = "build.rs"

[workspace]
members = [
    "type_process_builder",
    "process_runner",
]

[dependencies]
type_process_builder = { path = "type_process_builder" }
process_runner = { path = "process_runner" }

[build-dependencies]
monk = "0.3.4"
