[package]
name = "bricks"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
build = "build.rs"

[workspace]
members = [
    "type_process_builder",
    "process_runner",
]

[dependencies]
type_process_builder = { path = "type_process_builder" }
process_runner = { path = "process_runner" }
anyhow = "1.0"
serde-value = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
frunk_core = "0.4"
typenum = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
monk = "0.3.4"
