[package]
name = "bricks"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[workspace]
members = ["type_process_builder", "qrios_api_process_runner", "qrios_api_axum_server", "qrios_api_process_entry", "qrios_api_reqwest_client", "xtask"]

[dependencies]
type_process_builder = { path = "type_process_builder" }
anyhow = "1.0"
serde-value = "0.7"
serde = { version = "1.0", features = ["derive"] }
frunk_core = "0.4"
typenum = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
