[package]
name = "process_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = { version = "1.17", features = ["i128"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
anyhow = "1.0.79"
async-trait = "0.1.77"
aquamarine = "0.5.0"
#phf_codegen = "0.11.2"
