[package]
name = "process_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
typenum = { version = "1.17", features = ["i128"] }
async-trait = "0.1.77"
# not required:
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
anyhow = "1.0.79"
aquamarine = "0.5.0"
#phf_codegen = "0.11.2"
