[package]
name = "qrios_api_process_entry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typenum = "1.0"
type_process_builder = { path = "../type_process_builder" }
postcard = { version = "1.0", features = ["alloc"] }
frunk_core = "0.4"
anyhow = "1.0"
