[package]
name = "qrios_api_process_runner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_process_builder = { path = "../type_process_builder" }
qrios_api_axum_server = { path = "../qrios_api_axum_server", features = ["server"]}
async-trait = "0.1"
http = "1.0"
headers = "0.4"
axum-extra = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
