[package]
name = "qrios_api_process_runner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_process_builder = { path = "../type_process_builder" }
qrios_api_axum_server = { path = "../qrios_api_axum_server", features = ["server"] }
sqlx = { version = "0.8", features = ["postgres"] }
async-trait = "0.1"
http = "1.0"
headers = "0.4"
axum-extra = "0.12"
serde-value = "0.7"

[dev-dependencies]
qrios_api_reqwest_client = { path = "../qrios_api_reqwest_client" }
tokio = { version = "1.0", features = ["macros", "rt"] }
qrios_api_process_entry = { path = "../qrios_api_process_entry" }
frunk_core = "0.4"
anyhow = "1.0.82"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
typenum = "1.19.0"
tracing-subscriber = "0.3.22"
axum = "0.8.8"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
