[package]
name = "type_process_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process_builder_common = { path = "../process_builder_common" }
type_process_builder = { path = "../type_process_builder" }
async-trait = "0.1.80"
anyhow = "1.0.82"
