[package]
name = "type_process_builder"
version = "0.1.0"
edition = "2024"

[features]
docs = ["dep:simple-mermaid"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0" # should be this error
frunk_core = "0.4"
serde-value = "0.7" # generic over format, but might be not quite the blazingly fast approach
simple-mermaid = { version = "0.2.0", optional = true }
typenum = { version = "1.0" }
log = "0.4.29"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
