[package]
name = "type_process_builder"
version = "0.1.0"
edition = "2024"

[features]
docs = ["dep:simple-mermaid"]

[dependencies]
serde = "1.0"
anyhow = "1.0" # should be this error
frunk_core = "0.4"
postcard = { version = "1.0", features = ["alloc"] }
simple-mermaid = { version = "0.2.0", optional = true }
typenum = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
